0.3.0
    Remove BoneCP support
    org.killbill.dao.minIdle now defaults to 0
    Upgrade Dropwizard metrics (3.1.1), jDBI (2.59) and H2 (1.4.186)
    https://github.com/killbill/killbill-commons/issues/5
    https://github.com/killbill/killbill-commons/issues/8
    Update to killbill-oss-parent 0.11.0

0.2.33
    Add auto-increment for the queue historical tables (which caused a lot of headaches because of how mysql implements the auto_increment)
    Minor buf fixes in queue search APIs

0.2.32
    Another fix for https://github.com/killbill/killbill-commons/issues/6
    New search APIs for the queues
    Update to killbill-oss-parent 0.9.10

0.2.31
    Refactor queue to remove deprecated Transmogrifier class and use jdbc Connection instead

0.2.30
    Attempt to fix https://github.com/killbill/killbill-commons/issues/6

0.2.29
    https://github.com/killbill/killbill/issues/226
    New Debug system property for Hostname (queue)

0.2.28
    Create ClockUtil to start encapsulating Clock functions

0.2.27
    Fix around MysqldResource (test)
    Code review integration

0.2.26
    Move to MariaDB and HikariCP (connection pool)
    Fix in queue for duplicate entries
    Fix for LowerToCamelBeanMapper when reading date
    jdbi: switch to HikariCP pool and MariaDB JDBC driver

0.2.25
    Skipped (build issues)

0.2.24
    Queue: fix duplicate entry issue when configured with sticky and multiple threads
    Update to killbill-oss-parent 0.7.26

0.2.23
    Fix inflightQ queue to allow multiple events to be submitted per transactions

0.2.22
    Queue perf improvement and bug fixes

0.2.21
    Update to killbill-oss-parent 0.7.21
    Lower default jdbi logging level
    Queue: performance improvements
      - Batch queries when possible
      - Optimize jdbi string template loading
      - Introduce DatabaseTransactionNotificationApi
      - Modify InflightQ algorithm to avoid polling

0.2.20
    profiling: add support for JAX-RS